# aoc-markdown-table

./: README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
src/advent_readme_stars/: constants.py  progress.py  update.py
tests/: helpers.py  test_advent.py  test_progress.py  test_update.py
