[tool.poetry]
name = "aoc-markdown-table"
version = "1.0.5"
description = "Duplicated and modified version of advent-readme-stars."
authors = ["Thomas Feuerbach"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
# Pins
platformdirs = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.910"
poethepoet = "^0.11.0"
responses = "^0.16.0"
types-requests = "^2.26.1"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poe.tasks]
autoformat.sequence = [
    {cmd = "black src tests"},
    {cmd = "isort src tests"},
]

[tool.poe.tasks.test]
cmd = "pytest -vv"

[tool.poe.tasks.test.env]
INPUT_USERID = "1511815"
INPUT_LEADERBOARDID = "9995999"
INPUT_SESSIONCOOKIE = "998877665544332211"
INPUT_TABLEMARKER = "<!--- advent_readme_stars table --->"
INPUT_STARSYMBOL = "â­"
INPUT_YEAR = "2022"
INPUT_HEADERPREFIX = "##"
ADVENT_URL = "http://fake.site.tfeuerbach.dev"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
